# abc

./: package-lock.json  package.json  teconfig.js  tsconfig.json  tvconfig.js
app/: lib.tsx  main.tsx  page.tsx
lib/: .gitignore  Cargo.toml
lib/capabilities/: default.json
lib/src/: cmd.rs  fse.rs  lib.rs  set.rs
src/: lib.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
