[package]
name = "app"
version = "0.0.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
log = "0"
zip = "~2.5"
serde = "1"
anyhow = "1"
chrono = "0"
notify = "8"
itertools = "0"
serde_json = "1"
zip-extensions = "0"
duration-string = "0"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
notify-debouncer-full = "0"
tauri-plugin-single-instance = "2"
# https://github.com/matzefriedrich/zip-extensions-rs/pull/19

[features]
default = ["tauri/test", "serde/derive", "notify/serde", "duration-string/serde"]
